--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'NotoSans';
+  src: local('NotoSans'), url('./fonts/NotoSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
