--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,23 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif, 'NotoSans-Bold';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    monospace, 'NotoSans-Regular', 'NotoSans-Bold';
 }
 
 @font-face {
-  font-family: 'NotoSans';
+  font-family: 'NotoSans-Regular';
   src: local('NotoSans'), url('./fonts/NotoSans-Regular.ttf') format('truetype');
   font-weight: normal;
+}
+@font-face {
+  font-family: 'NotoSans-Bold';
+  src: local('NotoSans'), url('./fonts/NotoSans-Bold.ttf') format('truetype');
+  font-weight: bold;
 }
