--- a/src/Pages/Shared/Input.css
+++ b/src/Pages/Shared/Input.css
@@ -1,3 +1,9 @@
+.input-div {
+  color: #474747;
+  font-size: 13pt;
+  font-family: NotoSans-Regular;
+}
+
 input:focus {
   outline: none;
   border-color: #25b099;
@@ -8,7 +14,8 @@ input:hover {
   outline: none;
   border-color: #25b099;
   background: #fff;
-  box-shadow: 0 0 0 3px #3bc3a7;
+  box-shadow: 0 0 0 5px #3bc3a7;
+  transition: 200ms;
 }
 
 input {
@@ -17,5 +24,14 @@ input {
   font-size: 13pt;
   border-radius: 8px;
   background-color: #f5f5f5;
-  margin: auto 1rem;
+  margin: 1em;
+  padding-left: 1em;
+}
+div {
+  display: flex;
+  flex-direction: column;
+}
+label {
+  margin-left: 10px;
+  text-align: left;
 }
