--- a/src/Pages/Shared/Button.css
+++ b/src/Pages/Shared/Button.css
@@ -1,12 +1,13 @@
 button {
   font-family: NotoSans-Regular;
-  width: 130px;
-  height: 46px;
-  border-radius: 10px;
+  width: 8em;
+  height: 2.5em;
+  border-radius: 0.5vw;
   border: none;
   background-color: #25b099;
-  font-size: 13pt;
+  font-size: 2.4vh;
   color: #ffff;
+  margin: 3%;
 }
 
 button:hover {
