--- a/src/Pages/Shared/Input.css
+++ b/src/Pages/Shared/Input.css
@@ -1,6 +1,6 @@
 .input-div {
   color: #474747;
-  font-size: 13pt;
+  font-size: 1em;
   font-family: NotoSans-Regular;
 }
 
@@ -8,30 +8,29 @@ input:focus {
   outline: none;
   border-color: #25b099;
   background: #fff;
-  box-shadow: 0 0 0 3px #3bc3a7;
+  box-shadow: 0 0 0 0.3vw #3bc3a7;
 }
 input:hover {
   outline: none;
   border-color: #25b099;
   background: #fff;
-  box-shadow: 0 0 0 5px #3bc3a7;
+  box-shadow: 0 0 0 0.3vw #3bc3a7;
   transition: 200ms;
 }
 
 input {
   border: none;
-  height: 35px;
-  font-size: 13pt;
-  border-radius: 8px;
+  height: 2.3rem;
+  font-size: 1em;
+  border-radius: 0.5rem;
   background-color: #f5f5f5;
-  margin: 1em;
-  padding-left: 1em;
+  margin: 3%;
 }
 div {
   display: flex;
   flex-direction: column;
 }
 label {
-  margin-left: 10px;
+  margin-left: 1em;
   text-align: left;
 }
