--- a/src/Pages/Components/Footer.css
+++ b/src/Pages/Components/Footer.css
@@ -1,16 +1,17 @@
-.footer {
+footer {
   font-family: NotoSans-Regular;
   justify-content: center;
-  width: auto;
-  height: 10vh;
-  z-index: 2;
   border-top: solid 1px #dcdcdc;
   background-color: #fff;
   display: flex;
   flex-direction: row;
   align-items: center;
-  position: relative;
   color: #474747;
+  width: 100%;
+  height: 10vh;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 .paragraph {
   font-size: 0.8rem;
@@ -18,5 +19,15 @@
   margin: auto 1rem;
 }
 .footer-img {
+  width: 8em;
   margin: auto 1rem;
+}
+@media only screen and (max-width: 900px) {
+  footer {
+    position: absolute;
+    bottom: 0;
+  }
+  .footer-img {
+    width: 3em;
+  }
 }
