--- a/src/Pages/Shared/Input.css
+++ b/src/Pages/Shared/Input.css
@@ -19,12 +19,15 @@ input:hover {
 }
 
 input {
+  font-family: NotoSans-Regular;
   border: none;
   height: 2.3rem;
   font-size: 1em;
   border-radius: 0.5rem;
   background-color: #f5f5f5;
   margin: 3%;
+  padding-left: 3%;
+  color: #474747;
 }
 div {
   display: flex;
