--- a/src/Pages/Shared/Title.css
+++ b/src/Pages/Shared/Title.css
@@ -1,6 +1,7 @@
 h1 {
+  font-family: NotoSans-Bold;
   color: #25b099;
   font-size: 4.3vh;
-  font-family: NotoSans-Bold;
   margin: 0;
+  line-height: 1em;
 }
