--- a/src/Pages/Components/Footer.css
+++ b/src/Pages/Components/Footer.css
@@ -9,9 +9,10 @@ footer {
   color: #474747;
   width: 100%;
   height: 10vh;
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
+  z-index: -1;
 }
 .paragraph {
   font-size: 0.8rem;
@@ -23,10 +24,6 @@ footer {
   margin: auto 1rem;
 }
 @media only screen and (max-width: 900px) {
-  footer {
-    position: absolute;
-    bottom: 0;
-  }
   .footer-img {
     width: 3em;
   }
