--- a/src/Pages/Components/Header.css
+++ b/src/Pages/Components/Header.css
@@ -1,10 +1,12 @@
 .Header {
+  background-color: #ffff;
   display: flex;
   flex-direction: row;
   width: 100%;
   border-bottom: solid 1px #dcdcdc;
   z-index: 3;
   height: 10vh;
+  position: fixed;
 }
 
 .Image {
