--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -3,24 +3,25 @@
   display: flex;
   flex-direction: row;
   column-gap: 5%;
-  height: 100vh;
-  overflow-x: hidden;
+  height: 80vh;
+  margin-top: 10vh;
 }
-
 .image-login-div {
+  z-index: -1;
   display: flex;
-  height: 100%;
-  width: 50%;
+  width: 65%;
+  align-self: flex-end;
 }
-.image-login-div img {
-  width: 90%;
-}
-
 .login {
+  margin: auto 10rem;
   display: flex;
   flex-direction: column;
-  width: 35%;
-  margin-right: 10%;
+  width: 30%;
+  justify-content: center;
+}
+.image-login-div img {
+  position: relative;
+  width: 95%;
 }
 .titles {
   text-align: left;
@@ -42,15 +43,16 @@
   justify-content: space-between;
   display: flex;
   flex-direction: row;
-  width: 90%;
+  width: 95%;
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1024px) {
   .main-login {
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
     column-gap: none;
+    height: auto;
   }
   .login {
     width: 100%;
@@ -62,7 +64,13 @@
     text-align: center;
   }
   .image-login-div {
+    align-self: center;
     width: 50%;
+  }
+  .image-login-div img {
+    width: auto;
+    position: relative;
+    bottom: 0;
   }
   .input {
     width: 100%;
@@ -73,6 +81,6 @@
   }
   .links-menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
 }
