--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -1,4 +1,3 @@
-
 .main-login {
   font-family: NotoSans-Regular;
   display: flex;
@@ -6,7 +5,6 @@
   column-gap: 5%;
   height: auto;
   margin-top: 10vh;
-
 }
 .image-login-div {
   z-index: -1;
@@ -20,7 +18,7 @@
   flex-direction: column;
   width: 30%;
   justify-content: center;
-
+  z-index: 0;
 }
 .image-login-div img {
   position: relative;
