--- a/src/Pages/Conta.css
+++ b/src/Pages/Conta.css
@@ -2,8 +2,6 @@
   display: grid;
   grid-template-columns: 15% 85%;
   grid-template-rows: 1fr;
-  width: 100%;
-  height: 100%;
 }
 .div-context {
   overflow-y: auto;
@@ -11,12 +9,20 @@
   max-height: 89.9vh;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (min-width: 0px) and (max-width: 1024px) {
   .main-conta {
     grid-template-columns: 0% 100%;
   }
+  .div-context {
+    max-height: 100vh;
+  }
 }
-@media only screen and (max-width: 1400px) {
+@media only screen and (min-width: 1025px) and (max-width: 1140px) {
+  .main-conta {
+    grid-template-columns: 25% 75%;
+  }
+}
+@media only screen and (min-width: 1141px) and (max-width: 1700px) {
   .main-conta {
     grid-template-columns: 20% 80%;
   }
