--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,4 +1,5 @@
 .div-main-home {
+  transition: 1s;
   padding: 3em;
   position: relative;
   margin-top: 8vh;
@@ -11,7 +12,18 @@
   width: 45%;
 }
 .div-main-home p {
+  margin: 1em;
   font-family: NotoSans-Regular;
   color: #474747;
   text-align: center;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 1024px) {
+  .div-main-home {
+    height: 100vh;
+  }
+  .div-main-home img {
+    width: 90%;
+    margin-top: 2em;
+  }
 }
