--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,5 +1,4 @@
 .div-main-home {
-  transition: 1s;
   padding: 3em;
   position: relative;
   margin-top: 8vh;
@@ -7,6 +6,7 @@
   flex-direction: column;
   height: 100%;
 }
+
 .div-main-home img {
   align-self: center;
   width: 45%;
@@ -17,6 +17,21 @@
   color: #474747;
   text-align: center;
 }
+
+
+.div-main-home {
+  animation-name: pageview;
+  animation-duration:400ms;
+  
+}
+
+@keyframes pageview {
+
+  from{opacity: 15%; transform: translate3d(-150px, 0, 0);  }
+  to{opacity:  100%;   transform: translate3d(0px, 0, 0); }
+
+}
+
 
 @media only screen and (min-width: 0px) and (max-width: 1024px) {
   .div-main-home {
