add dados do cliente

--- a/src/Pages/Components/Header.css
+++ b/src/Pages/Components/Header.css
@@ -72,7 +72,7 @@
   .hamburguinho {
     display: block;
     position: absolute;
-    right: 1em;
+    right: 3rem;
   }
   .main-div-user {
     width: 25%;
