--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   width: auto;
   height: auto;
   overflow: hidden;
-  font-family: NotoSans-Bold;
   position: relative;
 }
 .header-app {
@@ -12,4 +11,20 @@ p {
   font-family: NotoSans-Regular;
   color: #474747;
   margin: 0;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-family: NotoSans-Bold;
+  font-size: 1rem;
+}
+a {
+  font-family: NotoSans-Regular;
+  color: unset;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  display: flex;
+  text-decoration: unset;
 }
