menu was improvements

--- a/src/Pages/Components/MenuPrestador.css
+++ b/src/Pages/Components/MenuPrestador.css
@@ -11,6 +11,9 @@
   margin-top: 10vh;
 }
 
+.transiction-menu {
+  animation: opacityAnime forwards 200ms;
+}
 .animation {
   animation-name: iconsAnime;
   animation-duration: 100ms;
@@ -27,6 +30,16 @@
   }
 }
 
+@keyframes opacityAnime {
+  from {
+    opacity: 0;
+    height: 50%;
+  }
+  to {
+    opacity: 1;
+    height: 100%;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .main-menu {
     display: none;
