--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
+html {
+  animation-name: pageview;
+  animation-duration: 400ms;
+  font-family: NotoSans-Regular;
+}
 .App {
+  transition: 185ms;
   width: auto;
   height: auto;
   overflow: hidden;
@@ -8,7 +14,6 @@
   position: relative;
 }
 p {
-  font-family: NotoSans-Regular;
   color: #474747;
   margin: 0;
 }
@@ -20,7 +25,6 @@ h4 {
   font-size: 1rem;
 }
 a {
-  font-family: NotoSans-Regular;
   color: unset;
   align-items: center;
   align-self: center;
@@ -29,8 +33,21 @@ a {
   text-decoration: unset;
 }
 label {
-  font-family: NotoSans-Regular;
   color: unset;
   text-decoration: unset;
   font-size: 1rem;
+}
+
+@keyframes pageview {
+  from {
+    opacity: 15%;
+    transform: translate3d(-150px, 0, 0);
+  }
+  to {
+    opacity: 100%;
+    transform: translate3d(0px, 0, 0);
+  }
+}
+button {
+  margin: 1rem auto;
 }
