--- a/src/Pages/Components/MenuSuperior.css
+++ b/src/Pages/Components/MenuSuperior.css
@@ -1,16 +1,15 @@
 .main-div-menu {
+  animation: opacityAnimeSup forwards 300ms;
   z-index: 10;
   position: absolute;
   flex-direction: column;
   display: flex;
-  width: 98vw;
-  height: auto;
+  width: 95vw;
   top: 10vh;
   background-color: #f5f5f5;
   box-shadow: 5px 5px 10px #999999;
   border-radius: 10px;
-  margin-left: 1vw;
-  transition: 150ms;
+  margin-left: 2.5vw;
 }
 .main-h1-menu {
   border-radius: 0px 0px 10px 10px;
@@ -23,11 +22,20 @@
   display: grid;
   grid-template-columns: 65% 1fr;
   border-radius: 10px;
+  height: -webkit-fill-available;
 }
+/* .prestador-div-menu {
+  height: fill;
+} */
 .main-h1-menu h1 {
   font-size: 1.2rem;
   color: #ffffff;
   margin: 1rem auto;
+}
+
+.colab-div-menu {
+  height: auto;
+  border-radius: 0 0 10px 0;
 }
 
 .colab-div-menu,
@@ -48,7 +56,7 @@
 }
 .prestador-div-menu ul,
 .colab-div-menu ul {
-  height: 100%;
+  height: fill;
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -56,7 +64,7 @@
 
 .main-div-menu div li h4 {
   width: 100%;
-  font-size: 0.8rem;
+  font-size: 1rem;
   margin: 3%;
 }
 .main-div-menu div li h2 {
