--- a/src/Pages/Components/Header.css
+++ b/src/Pages/Components/Header.css
@@ -9,21 +9,11 @@
   position: fixed;
   align-items: center;
 }
-.div-img-logotipo a {
-  margin: 1.6rem;
-  font-family: NotoSans-Regular;
-  color: none;
-  align-items: center;
-  align-self: end;
-  align-content: none;
-  display: flex;
-  text-decoration: none;
-}
-.div-img-logotipo {
-  width: auto;
-}
+
 .div-img-logotipo img {
-  margin: 0;
+  width: auto;
+  cursor: pointer;
+  margin: 1em;
   width: 10rem;
 }
 
