--- a/src/Pages/Conta/Status.css
+++ b/src/Pages/Conta/Status.css
@@ -1,8 +1,10 @@
-.div-main-recadastramento {
+.div-main-status {
   padding: 3em;
   position: relative;
   margin-top: 8vh;
   display: flex;
   flex-direction: column;
   height: 100vh;
+  animation-name: pageview;
+  animation-duration: 400ms;
 }
