begin of implement redux

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  animation-name: pageview;
+  /* animation-name: pageview; */
   animation-duration: 400ms;
   font-family: NotoSans-Regular;
 }
