--- a/src/Pages/PrimeiroAcesso.css
+++ b/src/Pages/PrimeiroAcesso.css
@@ -4,7 +4,9 @@
   margin-top: 8vh;
   display: flex;
   flex-direction: row;
-  height: 80vh;
+  height: auto;
+  animation-name: pageview;
+  animation-duration: 400ms;
 }
 
 .div-form-primeiro-acesso {
@@ -16,7 +18,9 @@
   width: 50%;
 }
 .img-primeiro-acesso {
-  width: 100%;
+  bottom: 0;
+  position: absolute;
+  width: 50%;
   z-index: -1;
 }
 .form-primeiro-acesso {
@@ -35,4 +39,19 @@
   z-index: 99;
   margin: 0;
   margin-top: 3%;
+}
+
+@media only screen and (max-width: 1024px) {
+  .div-img-primeiro-acesso {
+    display: none;
+  }
+  .img-primeiro-acesso {
+    display: none;
+  }
+  .form-primeiro-acesso {
+    width: 100%;
+  }
+  .div-form-primeiro-acesso {
+    width: 100%;
+  }
 }
