--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -66,7 +66,7 @@
     width: 100%;
     align-items: center;
     column-gap: none;
-    height: auto;
+    height: 100vh;
   }
   .login {
     width: 100%;
