--- a/src/Pages/Components/MenuSuperior.css
+++ b/src/Pages/Components/MenuSuperior.css
@@ -1,5 +1,7 @@
 .main-div-menu {
-  animation: opacityAnimeSup forwards 300ms;
+  animation-name: opacityAnimeSup;
+  animation-fill-mode: forwards;
+  animation-duration: 0.5s;
   z-index: 10;
   position: absolute;
   flex-direction: column;
@@ -10,7 +12,7 @@
   box-shadow: 5px 5px 10px #999999;
   border-radius: 10px;
   margin-left: 2.5vw;
-  height: 30vh;
+  /* height: 30vh; */
 }
 .main-h1-menu {
   border-radius: 0px 0px 10px 10px;
@@ -26,9 +28,7 @@
   border-radius: 10px;
   height: fill;
 }
-/* .prestador-div-menu {
-  height: fill;
-} */
+
 .main-h1-menu h1 {
   font-size: 1.2rem;
   color: #ffffff;
@@ -90,18 +90,22 @@
 .main-div-menu img {
   cursor: pointer;
 }
-
+@media only screen and (max-width: 600px) {
+  .prestador-div-menu {
+    background-color: #f5f5f5;
+  }
+  .colab-div-menu {
+    background-color: #25b099;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .main-div-menu {
-    animation: opacityAnimeSupMovel forwards 300ms;
-    z-index: 9999;
+    /* animation: animeMenuSup forwards 5s; */
     display: flex;
     flex-direction: column;
-    height: 100vh;
   }
   .colab-section-user {
     width: 100%;
-    margin-top: 10%;
     display: flex;
     justify-content: center;
   }
@@ -109,7 +113,8 @@
   .main-div-dados-menu,
   .main-div-dados-menu ul {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    /* flex-direction: column-reverse; */
     margin: 0;
     padding: 0;
     width: 100%;
@@ -120,14 +125,12 @@
 
   .prestador-div-menu {
     background-color: #f5f5f5;
-    height: 60%;
   }
   .colab-div-menu {
-    height: 40%;
+    background-color: #25b099;
   }
   .colab-div-menu ul li,
   .prestador-div-menu ul li {
-    height: auto;
     display: flex;
     flex-direction: column;
     margin: 0.6em auto;
